Code blocks need wrapping to avoid blowing up layout

--- a/source/wasm/prestatic/malarkdowney.css
+++ b/source/wasm/prestatic/malarkdowney.css
@@ -2,6 +2,17 @@
   white-space-collapse: preserve;
 }
 
+/* Block things */
+/* ************ */
+
+code.malarkdowney,
+.malarkdowney_block_code {
+  font-family: monospace;
+}
+
+/* Line things */
+/* *********** */
+
 .malarkdowney_line {
   min-height: 1em;
 }
